elofgren: USABILITY: Fix usability issue #66 'Cancel button needs to be added to Send Newsletter Window' by adding a Cancel button and aligning it left. More info here: http://www.elijahlofgren.com/silverstripe/cancel-button-needs-to-be-added-to-send-newsletter-window/ (merged from branches/gsoc)
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/trunk@41794 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_right.css
+++ b/css/cms_right.css
@@ -87,6 +87,12 @@ html>body .right form textarea.htmleditor {
 .right form .optionset li {
 	list-style: none;
 }
+.right form .optionset li.cancel {
+	float: left;
+}
+.right form .optionset li.submit {
+	text-align: right;
+}
 
 .right form h2 {
 	clear: both;
